@@ -1,3 +1,4 @@
+2015-01-13 Added show and hide commands to SVG module
 2015-01-12 Added ability to choose starting point of presentation in Slideshow module
 2015-01-12 Fixed double click effect on mobile devices in IWB Toolbar module
 2015-01-09 Fixed Stand and Hide Area functions on mobile devices in IWB Toolbar module
